<resources>
    <string name="app_name">FinancePal</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Add bonds</string>
    <string name="tab_text_3">Dictionary</string>
    <string name="add_bond">Bonds</string>
    <string name="hint_bond">Aktie,…</string>
    <string name="hint_name">Bezeichnung</string>
    <string name="hint_kurs">Kurs (zb. 10.00)</string>
    <string name="hint_wert">Wert</string>
    <string name="hint_anzahl">Anzahl</string>
    <string name="button_save">Speichern</string>
    <string name="new_instrument">Neues Finanzinstrument: </string>
    <string name="empty_not_saved">Instrument nicht gespeichert, weil es leer ist.</string>

    <string name="Kontostand">Kontostand:</string>

    <!-- TODO: Hier können zentral Strings definiert werden -->

    <string name="inhalt1">Hier jeweils den Inhalt einfügen (Tab 1 Overview)</string>
    <string name="inhalt2">Platzhalter für Tab 2</string>
    <string name="inhalt3">Platzhalter Dictionary Tab</string>

    <string name="aktien_title">Aktien</string>
    <string name="anleihen_title">Anleihen</string>
    <string name="rohstoffe_title">Rohstoffe</string>
    <string name="optionsscheine_title">Optionsscheine</string>
    <string name="krypto_title">Kryptowährungen</string>
    <string name="anlegen">Please specify the product you want to add:</string>

    <string name="aktien_text">
        \n-Anteil eines Unternehmens (Aktiengesellschaft)
        \n-Wert der Aktie entspricht dem Kurs
        \n-Der Kurs wird durch Angebot und Nachfrage bestimmt
        \n-Steigende Kurse und Dividenden führen zu Gewinn
        \n-Dividenden: jährlich wird ein Teil des Firmengewinns an die Aktienbesitzer verteilt
    </string>
    <string name="anleihen_text">
        \n-Festverzinsliche Wertpapiere über vordefinierte Laufzeit
        \n-Der Käufer hat das Recht auf Rückzahlung seiner Investition plus vereinbarte Zinsen
        \n-Man muss die Anleihen aber nicht halten, sondern kann sie auch (ähnlich wie Aktien) zu einem Kurswert verkaufen
        \n\n-Bestandteile von Anleihen:
        \n      -Nennwert:	entspricht der Stückelung der Anleihe, also dem Betrag für den man sie kauft und
			                welchen man am Ende zurück bekommt (vorausgesetzt der herausgeber der Anleihe kann bezahlen)
        \n      -Kuponzins:	jährlicher Zins
        \n      -Laufzeit:	feste Laufzeit bis zur Auszahlung
    </string>
    <string name="optionsscheine_text">
        \n-Ein Optionsschein hat ein Basisprodukt wie zB Aktien, Anleihen oder Rohstoffe
        \n-Mit dem Kauf einer Option erhält man das Recht dieses Produkt
            zu einem bestimmten Zeitpunkt zu einem zuvor festgelegten Preis zu kaufen oder verkaufen
	        (muss man aber nicht, ist also optional -> Option)
        \n-Es gibt Call- und Put-Optionsscheine
        \n-Call: Wenn man davon ausgeht, dass der Kurs steigen wird, kann man das Produkt zu einem späteren Zeitpunkt für einen günstigeren Preis zu kaufen
        \n-Put: Man kann das Produkt im Falle eines fallenden Kurses teuerer verkaufen
        \n-Bei Optionsscheinen wirkt ein Hebeleffekt: Durch geringen Kapitaleinsatz kann ein großer Gewinn erzielt werden.
    </string>
    <string name="rohstoffe_text">
        \n-Rohstoffe wie z.B. Öl oder Gold eignen sich auch als Investment oder Geldanlage und können wie Aktien zu einem Kurs gehandelt werden.
    </string>
    <string name="krypto_text">
        \n-Kryptowährungen sind digitale Währungen
        \n-Mit Kryptowährungen können Produkte oder Dienste im Internet bezahlt werden
        \n-Durch oft sehr volatile Wertentwicklungen kann größerer Gewinn erzielt werden
        \n-Kein sicheres Anlageinstrument
        \n-setzt hohe Risikobereitschaft voraus
        \n-Beispiele: Bitcoin, Ethereum, Ripple, Litecoin
    </string>

    <string-array name="dropdown1">
        <item>Aktien</item>
        <item>Anleihen</item>
        <item>Rohstoffe</item>
        <item>Optionsscheine</item>
        <item>Kryptowährungen</item>
    </string-array>
    <string-array name="dropdown2">
        <item>EUR</item>
        <item>USD</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>RUB</item>
        <item>JPY</item>
    </string-array>
</resources>
